--- a/control.html
+++ b/control.html
@@ -4,132 +4,121 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Door System Control</title>
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body {
-      background: #f5f5f5;
-    }
-    .navbar {
-      margin-bottom: 40px;
-    }
-    h1 {
-      text-align: center;
-      margin: 40px 0;
-      font-weight: bold;
+    body { background: #f5f5f5; }
+    h1 { text-align: center; margin: 40px 0; font-weight: bold; }
+    .card { margin-bottom: 20px; }
+    .list-group-item button, .list-group-item a {
+      width: 100%;
+      text-align: left;
     }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Smart Door System</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ms-auto">
+  <div class="container">
+    <h1>Smart Door System Control</h1>
 
-          <!-- Smart Door System Options -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-              Smart Door System Options
-            </a>
-            <ul class="dropdown-menu">
-
-              <!-- Open Door -->
-              <li class="dropdown-submenu dropend">
-                <a class="dropdown-item dropdown-toggle" href="#">Open Door</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('open door & close it')">Open & Close</a></li>
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('open door only')">Open Only</a></li>
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('close door only')">Close Only</a></li>
-                </ul>
-              </li>
-
-              <!-- Toggle Camera -->
-              <li class="dropdown-submenu dropend">
-                <a class="dropdown-item dropdown-toggle" href="#">Toggle Camera</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('start camera')">Start Camera</a></li>
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('stop camera')">Stop Camera</a></li>
-                </ul>
-              </li>
-
-              <!-- Toggle System -->
-              <li class="dropdown-submenu dropend">
-                <a class="dropdown-item dropdown-toggle" href="#">Toggle System</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('unlock system')">Unlock System</a></li>
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('lock system')">Lock System</a></li>
-                </ul>
-              </li>
-
-              <!-- Penalty Activate -->
-              <li class="dropdown-submenu dropend">
-                <a class="dropdown-item dropdown-toggle" href="#">Penalty Activate</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('the system penalty')">Default Penalty</a></li>
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('extended to 30 seconds')">30 Seconds</a></li>
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('extended to 1 minutes')">1 Minute</a></li>
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('penalty with coffin dance buzzer')">Coffin Dance</a></li>
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('penalty with pirates of the caribbean')">Pirates</a></li>
-                  <li><a class="dropdown-item" href="#" onclick="sendToBot('penalty with tokyo')">Tokyo</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-          <!-- Add-on Options -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-              Smart Door System Add-on Options
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="downloads/tkinter_colors.png" download>TKinter Color Chart</a></li>
-            </ul>
-          </li>
-
-          <!-- Explanation -->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-              Smart Door System Explanation
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="downloads/arduino_components.txt" download>Arduino Components</a></li>
-              <li><a class="dropdown-item" href="downloads/python_components.txt" download>Python Components</a></li>
-              <li><a class="dropdown-item" href="downloads/arduino_libraries.txt" download>Arduino Libraries</a></li>
-              <li><a class="dropdown-item" href="downloads/python_libraries.txt" download>Python Libraries</a></li>
-              <li><a class="dropdown-item" href="downloads/explain_arduino.txt" download>Explain Arduino Code</a></li>
-              <li><a class="dropdown-item" href="downloads/explain_python.txt" download>Explain Python Code</a></li>
-              <li><a class="dropdown-item" href="downloads/version1.txt" download>Version 1.0</a></li>
-              <li><a class="dropdown-item" href="downloads/version2.txt" download>Version 2.0</a></li>
-              <li><a class="dropdown-item" href="downloads/version3.txt" download>Version 3.0</a></li>
-              <li><a class="dropdown-item" href="downloads/dt06_wifi.txt" download>DT-06 WiFi Config</a></li>
-              <li><a class="dropdown-item" href="downloads/face_recognition.txt" download>Face Recognition</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+    <!-- Smart Door System Options -->
+    <div class="card">
+      <div class="card-header bg-dark text-white">Smart Door System Options</div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <button onclick="sendToBot('open door & close it')">Open Door & Close It</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('open door only')">Open Door Only</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('close door only')">Close Door Only</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('start camera')">Start Camera</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('stop camera')">Stop Camera</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('unlock system')">Unlock System</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('lock system')">Lock System</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('the system penalty')">Default Penalty</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('extended to 30 seconds')">Penalty 30s</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('extended to 1 minutes')">Penalty 1min</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('penalty with coffin dance buzzer')">Penalty Coffin Dance</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('penalty with pirates of the caribbean')">Penalty Pirates</button>
+        </li>
+        <li class="list-group-item">
+          <button onclick="sendToBot('penalty with tokyo')">Penalty Tokyo</button>
+        </li>
+      </ul>
     </div>
-  </nav>
 
-  <h1>Smart Door System Control Panel</h1>
+    <!-- Add-on Options -->
+    <div class="card">
+      <div class="card-header bg-dark text-white">Smart Door System Add-on Options</div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <a href="downloads/tkinter_colors.png" download>TKinter Color Chart</a>
+        </li>
+      </ul>
+    </div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Explanation -->
+    <div class="card">
+      <div class="card-header bg-dark text-white">Smart Door System Explanation</div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><a href="downloads/arduino_components.txt" download>Arduino Components</a></li>
+        <li class="list-group-item"><a href="downloads/python_components.txt" download>Python Components</a></li>
+        <li class="list-group-item"><a href="downloads/arduino_libraries.txt" download>Arduino Libraries</a></li>
+        <li class="list-group-item"><a href="downloads/python_libraries.txt" download>Python Libraries</a></li>
+        <li class="list-group-item"><a href="downloads/explain_arduino.txt" download>Explain Arduino Code</a></li>
+        <li class="list-group-item"><a href="downloads/explain_python.txt" download>Explain Python Code</a></li>
+        <li class="list-group-item"><a href="downloads/version1.txt" download>Version 1.0</a></li>
+        <li class="list-group-item"><a href="downloads/version2.txt" download>Version 2.0</a></li>
+        <li class="list-group-item"><a href="downloads/version3.txt" download>Version 3.0</a></li>
+        <li class="list-group-item"><a href="downloads/dt06_wifi.txt" download>DT-06 WiFi Config</a></li>
+        <li class="list-group-item"><a href="downloads/face_recognition.txt" download>Face Recognition</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Telegram Bot Sender -->
   <script>
+    const BOT_TOKEN = "8325912903:AAHYb-xLVI-JXWl3dc6_P8x2WwpqA_siA3g";
+    const CHAT_ID = "1399615425";
+
     function sendToBot(command) {
-      fetch("/send", {
+      fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
         method: "POST",
-        headers: {"Content-Type": "application/json"},
-        body: JSON.stringify({command: command})
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          chat_id: CHAT_ID,
+          text: command
+        })
+      }).then(res => {
+        if (res.ok) {
+          alert("Command sent: " + command);
+        } else {
+          alert("Failed to send command.");
+        }
       });
-      alert("Command sent: " + command);
     }
   </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
