--- a/control.html
+++ b/control.html
@@ -23,8 +23,8 @@
         <div class="card">
             <div class="card-header bg-secondary text-white">Smart Door System Options</div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><button onclick="sendToBot('door_openn')">Open Door & Close It</button></li>
-                <li class="list-group-item"><button onclick="sendToBot('Open Door Only')">Open Door Only</button></li>
+                <li class="list-group-item"><button onclick="sendToBot('normal_door')">Open Door & Close It</button></li>
+                <li class="list-group-item"><button onclick="sendToBot('door_openn')">Open Door Only</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('door_closee')">Close Door Only</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('start camera')">Start Camera</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('stop camera')">Stop Camera</button></li>
@@ -32,7 +32,7 @@
                 <li class="list-group-item"><button onclick="sendToBot('lock system')">Lock System</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('the system penalty')">Default Penalty</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('extended to 30 seconds')">Penalty 30s</button></li>
-                <li class="list-group-item"><button onclick="sendToBot('extended to 1 minutes')">Penalty 1min</button></li>
+                <li class="list-group-item"><button onclick="sendToBot('extended to 1 minute')">Penalty 1min</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('penalty with coffin dance buzzer')">Penalty Coffin Dance</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('penalty with pirates of the caribbean')">Penalty Pirates</button></li>
                 <li class="list-group-item"><button onclick="sendToBot('penalty with tokyo')">Penalty Tokyo</button></li>
@@ -70,7 +70,6 @@
     <script>
         const BOT_TOKEN = "8325912903:AAHYb-xLVI-JXWl3dc6_P8x2WwpqA_siA3g";
         const PRIVATE_CHAT_ID = "1399615425";
-        
 
         function sendToBot(command) {
             fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
@@ -92,13 +91,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
