--- a/control.html
+++ b/control.html
@@ -147,17 +147,17 @@
       </button>
       <div id="explain" class="collapse">
         <ul class="list-group list-group-flush list-group-dark">
-         <li class="list-group-item"><a href="downloads/arduino_components.txt" download>Arduino Components</a></li>
-                <li class="list-group-item"><a href="downloads/python_components.txt" download>Python Components</a></li>
-                <li class="list-group-item"><a href="downloads/arduino_libraries.txt" download>Arduino Libraries</a></li>
-                <li class="list-group-item"><a href="downloads/python_libraries.txt" download>Python Libraries</a></li>
-                <li class="list-group-item"><a href="downloads/explain_arduino.txt" download>Explain Arduino Code</a></li>
-                <li class="list-group-item"><a href="downloads/explain_python.txt" download>Explain Python Code</a></li>
-                <li class="list-group-item"><a href="downloads/version1.txt" download>Version 1.0</a></li>
-                <li class="list-group-item"><a href="downloads/version2.txt" download>Version 2.0</a></li>
-                <li class="list-group-item"><a href="downloads/version3.txt" download>Version 3.0</a></li>
-                <li class="list-group-item"><a href="downloads/dt06_wifi.txt" download>DT-06 WiFi Config</a></li>
-                <li class="list-group-item"><a href="downloads/face_recognition.txt" download>Face Recognition</a></li>
+         <li class="list-group-item"><a href="downloads/smart door system - project arduino components.pptx" download>Arduino Components</a></li>
+                <li class="list-group-item"><a href="downloads/smart door system - project python components.pptx" download>Python Components</a></li>
+                <li class="list-group-item"><a href="downloads/Arduino Libraries.txt" download>Arduino Libraries</a></li>
+                <li class="list-group-item"><a href="downloads/Python Libraries.txt" download>Python Libraries</a></li>
+                <li class="list-group-item"><a href="downloads/Arduino Explanation.txt" download>Explain Arduino Code</a></li>
+                <li class="list-group-item"><a href="downloads/Python Explanation.txt" download>Explain Python Code</a></li>
+                <li class="list-group-item"><a href="downloads/smart door system 1.0.zip" download>Version 1.0</a></li>
+                <li class="list-group-item"><a href="downloads/smart door system 2.0.zip" download>Version 2.0</a></li>
+                <li class="list-group-item"><a href="downloads/smart door system 3.0.zip" download>Version 3.0</a></li>
+                <li class="list-group-item"><a href="downloads/dt-06 wifi configuration.pdf" download>DT-06 WiFi Config</a></li>
+                <li class="list-group-item"><a href="downloads/FaceRecognition Explanation.txt" download>Face Recognition</a></li>
         </ul>
       </div>
     </div>
@@ -191,4 +191,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
