--- a/control.html
+++ b/control.html
@@ -65,8 +65,8 @@
             </button>
             <div id="openDoorMenu" class="collapse" data-bs-parent="#sdsOptions">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('normal_door')">open door & close it</button>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_openn')">open door only</button>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('normal_door')">open door & close it</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_openn')">open door only</button></li>
                 <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_closee')">close door only</button></li>
               </ul>
             </div>
@@ -169,7 +169,9 @@
   <!-- Bootstrap 5 (JS) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+  <!-- Firebase + Logic -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
     // إعدادات مشروعك
@@ -200,23 +202,21 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebas
     // نخليها متاحة للـ HTML
     window.sendCommand = sendCommand;
 
-        // يقفل أي قوائم فرعية مفتوحة لما الزر الكبير يتسكر
-        function closeInnerMenus(parentId) {
-          setTimeout(() => {
-            let parent = document.querySelector(parentId);
-            if (parent && !parent.classList.contains("show")) {
-              let opened = parent.querySelectorAll(".collapse.show");
-              opened.forEach(el => {
-                let bsCollapse = bootstrap.Collapse.getInstance(el);
-                if (bsCollapse) {
-                  bsCollapse.hide();
-                }
-              });
+    // يقفل أي قوائم فرعية مفتوحة لما الزر الكبير يتسكر
+    window.closeInnerMenus = function (parentId) {
+      setTimeout(() => {
+        let parent = document.querySelector(parentId);
+        if (parent && !parent.classList.contains("show")) {
+          let opened = parent.querySelectorAll(".collapse.show");
+          opened.forEach(el => {
+            let bsCollapse = bootstrap.Collapse.getInstance(el);
+            if (bsCollapse) {
+              bsCollapse.hide();
             }
-          }, 200);
+          });
         }
+      }, 200);
+    };
   </script>
 </body>
 </html>
-
-
