--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                                 </li>
                             </ul>
 
-                            <div class="ms-lg-3">
-                                <a class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal">
-    management
-    <i class="bi-arrow-up-right ms-2"></i>
+                            <div class="nav-item">
+                           <a class="nav-link click-scroll" href=href="#version2.html">full details</a>
+        
+    </i>
                                 </a>
                             </div>
                         </div>
@@ -618,6 +618,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
