--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </ul>
 
                             <div class="nav-item">
-                           <a class="nav-link click-scroll" href="#version2.html">full details</a>
+                           <a class="nav-link click-scroll" href="team.html">full details</a>
                             </li>
     </i>
                                 </a>
@@ -618,6 +618,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
